# TrendRadar

./: README-EN.md  README-MCP-FAQ-EN.md  README-MCP-FAQ.md  README.md  index.html  main.py  pyproject.toml
.github/workflows/: crawler.yml
config/: config.yaml
docker/: .env  docker-compose-build.yml  docker-compose.yml
mcp_server/: server.py
mcp_server/utils/: date_parser.py
output/2025年11月23日/html/: 15时30分.html  16时22分.html  17时17分.html  18时18分.html  19时14分.html  20时32分.html  21时22分.html  22时15分.html  23时16分.html  当日汇总.html
output/2025年11月23日/txt/: 15时30分.txt  16时22分.txt  19时14分.txt  20时32分.txt  22时15分.txt  23时16分.txt
output/2025年11月24日/html/: 00时20分.html  01时15分.html  02时24分.html  03时14分.html  04时20分.html  05时16分.html  06时17分.html  07时17分.html  09时28分.html  11时22分.html  12时32分.html  13时19分.html  14时29分.html  15时19分.html  16时27分.html  17时23分.html  18时21分.html  19时17分.html  20时39分.html  21时34分.html  22时19分.html  23时21分.html  当日汇总.html
output/2025年11月24日/txt/: 07时17分.txt  09时28分.txt  11时22分.txt  13时19分.txt  14时29分.txt  15时19分.txt  16时27分.txt  17时23分.txt  20时39分.txt  22时19分.txt  23时21分.txt
output/2025年11月25日/html/: 00时21分.html  01时18分.html  02时28分.html  04时21分.html  06时17分.html  07时17分.html  09时23分.html  11时14分.html  12时25分.html  13时19分.html  14时29分.html  15时19分.html  16时26分.html  17时22分.html  18时24分.html  19时17分.html  20时39分.html  21时35分.html  22时20分.html  23时21分.html  当日汇总.html
output/2025年11月25日/txt/: 06时17分.txt  07时17分.txt  09时23分.txt  11时14分.txt  12时25分.txt  14时29分.txt  15时19分.txt  16时26分.txt  17时22分.txt  19时17分.txt
(+235 files in other folders)
